--- a/proyectosStyle.css
+++ b/proyectosStyle.css
@@ -35,8 +35,6 @@ body {
     justify-content: center;
     align-items: center;
     gap: 20px;
-
-
 }
 
 .nav-bar-extend {
@@ -45,7 +43,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    gap: 20px;
+    gap: 10px;
+    margin-top: 78px;
+
 }
 
 .nav-bar-collapsed div a svg {
@@ -88,6 +88,26 @@ body {
     width: 100%;
 }
 
+/* .img-curri {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70% !important;
+    height: 25% !important;
+    background: rgba(123, 123, 123, 0.41);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(188, 187, 187, 0.1);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 1px solid rgba(206, 206, 206, 0.18);
+    animation: blink-1 1s .4s both;
+
+
+
+} */
+
+
 .nav-bar-extend div a {
     display: flex;
     justify-content: left;
@@ -108,7 +128,45 @@ body {
     color: rgb(246, 218, 181);
 }
 
+.div-infor-nav {
+    display: flex;
+    gap: 5px;
+    justify-content: space-evenly;
+    justify-content: right;
+}
 
+.div-infor-nav a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100%;
+    /* background-color: rgb(153, 51, 51); */
+}
+
+.div-infor-nav a:hover {
+
+
+    background: rgba(123, 123, 123, 0.41);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(188, 187, 187, 0.1);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 4px solid rgba(206, 206, 206, 0.18);
+
+    animation: heartbeat 8.5s ease-in-out infinite both;
+}
+
+
+
+.div-infor-nav a svg {
+    display: flex;
+    width: 100%;
+    height: 60%;
+    align-items: center;
+    justify-content: center;
+    /* background-color: rebeccapurple; */
+}
 
 .main {
     width: 93%;
@@ -483,6 +541,7 @@ img {
         display: flex;
         justify-content: center;
         align-items: center;
+
         font-size: 16px;
     }
 
@@ -592,7 +651,6 @@ img {
     padding: 10px;
 
 }
-
 
 
 
