--- a/proyectosStyle.css
+++ b/proyectosStyle.css
@@ -1,12 +1,10 @@
 body {
 
     display: flex;
-    /* background-color: beige; */
     height: 100vh;
     margin: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap');
 
 
 @font-face {
@@ -78,7 +76,6 @@ body {
     fill: rgb(246, 218, 181);
 }
 
-
 .nav-bar-extend div {
     display: flex;
     color: rgb(0, 0, 0);
@@ -87,25 +84,6 @@ body {
     align-items: center;
     width: 100%;
 }
-
-/* .img-curri {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70% !important;
-    height: 25% !important;
-    background: rgba(123, 123, 123, 0.41);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(188, 187, 187, 0.1);
-    backdrop-filter: blur(7.2px);
-    -webkit-backdrop-filter: blur(7.2px);
-    border: 1px solid rgba(206, 206, 206, 0.18);
-    animation: blink-1 1s .4s both;
-
-
-
-} */
 
 
 .nav-bar-extend div a {
@@ -116,10 +94,9 @@ body {
 }
 
 .nav-bar-extend div a h1 {
-    color: rgb(0, 0, 0);
     color: #f9f9f9;
-    font-size: 9px;
     text-decoration: none;
+    width: 100%;
     font-family: 'Space Grotesk', sans-serif;
     font-weight: bold !important;
 }
@@ -141,7 +118,6 @@ body {
     justify-content: center;
     width: 30%;
     height: 100%;
-    /* background-color: rgb(153, 51, 51); */
 }
 
 .div-infor-nav a:hover {
@@ -165,7 +141,6 @@ body {
     height: 60%;
     align-items: center;
     justify-content: center;
-    /* background-color: rebeccapurple; */
 }
 
 .main {
@@ -185,7 +160,6 @@ body {
     display: flex;
     color: white;
     margin-top: 5px;
-    /* border-bottom: 2px grey solid; */
     font-family: 'Zilla Slab', serif !important;
 
     border: white 3px solid;
@@ -254,13 +228,7 @@ body {
     display: none;
 }
 
-/* .asignaturas div {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    text-decoration: none;
-} */
+
 
 .asignaturas div h3 {
 
